# gluesql

./: .gitignore  AGENTS.md  CLAUDE.local.md  COVERAGE_RECOVERY_PLAN.md  Cargo.toml  FLOAT_VECTOR_IMPLEMENTATION_PLAN.md  LICENSE  PROMPT_NOTES.md  Package.swift  README.md  RELEASE.md  bump_script.js  clippy_errors.txt  codecov.yml  debug_vector.rs  package.json  rust-toolchain.toml  tarpaulin-report.html  test-vector-advanced.rs
cli/: Cargo.toml
cli/src/: cli.rs  command.rs  helper.rs  lib.rs  main.rs  print.rs  upgrade.rs
cli/tests/: dump.rs
core/: Cargo.toml
core/core_macros/: Cargo.toml
core/core_macros/src/: lib.rs
core/core_macros/tests/: basic_derives.rs  checks.rs
core/src/: ast.rs  ast_builder.rs  data.rs  executor.rs  from_row.rs  glue.rs  lib.rs  mock.rs  parse_sql.rs  plan.rs  query_builder.rs  result.rs  row.rs  row_conversion.rs  shared.rs  store.rs  translate.rs
core/src/ast/: ast_literal.rs  check_constraint.rs  data_type.rs  ddl.rs  expr.rs  expr_decoder.rs  function.rs  literal.rs  mod.rs  operator.rs  query.rs  trigger.rs
core/src/ast_builder/: alter_table.rs  assignment.rs  build.rs  column_def.rs  column_list.rs  create_table.rs  data_type.rs  delete.rs  drop_table.rs  error.rs  execute.rs  explain_table.rs  expr.rs  expr_list.rs  expr_with_alias.rs  format_type.rs  index.rs  index_by.rs  index_item.rs  insert.rs  mod.rs  order_by_expr.rs  order_by_expr_list.rs  query.rs  select.rs  select_item.rs  select_item_list.rs  set_expr.rs  show_columns.rs  table.rs  table_factor.rs  table_name.rs  transaction.rs  update.rs  values.rs
core/src/data/: ast_literal.rs  bigdecimal_ext.rs  custom_type.rs  float_vector.rs  function.rs  geojson.rs  interval.rs  key.rs  literal.rs  mod.rs  nullable.rs  point.rs  relation.rs  row.rs  schema.rs  string_ext.rs  table.rs  tribool.rs  trigger.rs  value.rs  vector_index.rs
core/src/executor/: aggregate.rs  alter.rs  context.rs  delete.rs  evaluate.rs  execute.rs  fetch.rs  filter.rs  insert.rs  join.rs  limit.rs  mod.rs  query.rs  select.rs  sort.rs  update.rs  validate.rs
core/src/parameter/: error.rs  mod.rs  wire.rs
core/src/plan/: aggregate.rs  context.rs  error.rs  evaluable.rs  expr.rs  index.rs  join.rs  mock.rs  mod.rs  planner.rs  primary_key.rs  schema.rs  schemaless.rs  statement.rs  union.rs  validate.rs
core/src/query_builder/: alter_table.rs  assignment.rs  build.rs  column_def.rs  column_list.rs  create_table.rs  data_type.rs  delete.rs  drop_table.rs  (+19 more)
core/tests/: row_conversion_vec_one.rs
gluesql/: Cargo.toml
gluesql-derive/: Cargo.toml
gluesql-js/web/: Cargo.toml  README.md  package.json
gluesql-macros/: Cargo.toml
gluesql-macros/src/: lib.rs
gluesql-macros/tests/: from_row.rs
gluesql/examples/: hello_world.rs  sled_multi_threaded.rs  using_config.rs
gluesql/src/: lib.rs
logic-test/: Cargo.toml
logic-test/src/: main.rs
macros/: Cargo.toml
macros/src/: from_glue_row.rs  lib.rs  to_glue_row.rs
macros/tests/: compile_fail.rs  e2e_memory_storage.rs  payload_conv.rs  payload_conv_err.rs  payload_conv_ok.rs  runtime_err_basic.rs  runtime_err_got_matrix.rs  runtime_err_last_select.rs  runtime_ok_basic.rs  runtime_ok_btreemap_t.rs  runtime_ok_from_glue_row.rs  runtime_ok_hashmap_t.rs  runtime_ok_idx_cache.rs  runtime_ok_map_option.rs  runtime_ok_nested_containers.rs  runtime_ok_result_ext.rs  runtime_ok_string_from_datetime.rs  runtime_ok_to_glue_row.rs  runtime_ok_unknown_attr.rs  runtime_ok_vec_t.rs
pkg/java/: Cargo.toml  DEVELOPMENT.md  README.md  build.gradle.kts  build.rs  gradle.properties  settings.gradle.kts  uniffi.toml
pkg/javascript/: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  gluesql.js  gluesql.node.js  gluesql.rollup.js  package.json
pkg/napi-rs/: .gitattributes  .gitignore  .prettierrc.json  Cargo.toml  README.md  browser.js  gluesql-napi.wasi-browser.js  gluesql-napi.wasi.cjs  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.js  tsconfig.json  vite.config.js  vitest.config.ts
pkg/nodejs/: .gitignore  Cargo.toml  package.json
pkg/python/: .editorconfig  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  gluesql.pyi  pyproject.toml  pytest.ini  requirements.txt
pkg/rust/: Cargo.toml
pkg/swift/: Cargo.toml  build_ios.sh  bundle_xcframework.sh  concat.sh  generate_bindings.sh  uniffi-bindgen.rs
pm/: Cargo.toml
pm/src/: lib.rs
pm/tests/: basic_derives.rs
storages/composite-storage/: Cargo.toml
storages/csv-storage/: Cargo.toml  users.xlsx
storages/etcd-storage/: Cargo.toml
storages/file-storage/: Cargo.toml
storages/git-storage/: Cargo.toml
storages/idb-storage/: Cargo.toml  README.md
storages/indexeddb-storage/: Cargo.toml
storages/json-storage/: Cargo.toml
storages/jsonl-storage/: Cargo.toml
test-suite/: Cargo.toml
test-suite/benches/: glue_benchmark.rs
test-suite/fixtures/: array.sql  basic.sql  column_alias.sql  custom_function.sql  default.sql  delete.sql  dictionary.sql  dictionary_index.sql  distinct.sql  filter.sql  foreign_key.sql  inline_view.sql  insert.sql  join.sql  like_ilike.sql  limit.sql  migrate.sql  nested_select.sql  nullable.sql  order_by.sql  ordering.sql  primary_key.sql  project.sql  series.sql  show_columns.sql  synthesize.sql  type_match.sql  update.sql  values.sql
test-suite/src/: aggregate.rs  alter.rs  arithmetic.rs  array.rs  ast_builder.rs  basic.rs  bit_shift.rs  bitwise_and.rs  bitwise_shift.rs  bitwise_shift_right.rs  blend.rs  case.rs  check_constraints.rs  column_alias.rs  concat.rs  cte.rs  custom_function.rs  data_type.rs  default.rs  delete.rs  dictionary.rs  dictionary_index.rs  distinct.rs  error.rs  executor.rs  explain_table.rs  expr.rs  filter.rs  fixture.rs  foreign_key.rs  foreign_key_on_delete.rs  foreign_key_on_update.rs  function.rs  index.rs  inline_view.rs  insert.rs  join.rs  lib.rs  like_ilike.rs  limit.rs  (+23 more)
test-suite/tests/: memory_storage.rs  sled_transaction.rs
test_suite/: Cargo.toml
test_suite/tests/: sled_storage.rs
utils/: Cargo.toml
utils/src/: hashmap.rs  indexmap.rs  lib.rs  or_stream.rs  tribool.rs  vector.rs
(+2029 files in other folders)
