[workspace]
resolver = "2"
members = [
  "cli",
  "core",
  "pkg/rust",
  "pkg/javascript",
  "pkg/python",
  "storages/*",
  "test-suite",
  "utils",
]
default-members = [
  "cli",
  "core",
  "pkg/rust",
  "pkg/javascript",
  "pkg/python",
  "storages/*",
  "test-suite",
  "utils",
]

# ref. https://github.com/rustwasm/wasm-pack/issues/1111
# enable this only for gluesql-js build
# [profile.release]
# opt-level = "s"

[workspace.package]
version = "0.16.2"
edition = "2021"
description = "GlueSQL - Open source SQL database engine fully written in Rust with pure functional execution layer, easily swappable storage and web assembly support!"
license = "Apache-2.0"
repository = "https://github.com/gluesql/gluesql"
documentation = "https://docs.rs/gluesql/"

[workspace.dependencies]
gluesql-core = { path = "./core", version = "0.16.2" }

cli = { package = "gluesql-cli", path = "./cli", version = "0.16.2" }
test-suite = { package = "gluesql-test-suite", path = "./test-suite", version = "0.16.2" }
gluesql_memory_storage = { path = "./storages/memory-storage", version = "0.16.2" }
gluesql-shared-memory-storage = { path = "./storages/shared-memory-storage", version = "0.16.2" }
gluesql_sled_storage = { path = "./storages/sled-storage", version = "0.16.2" }
gluesql-json-storage = { path = "./storages/json-storage", version = "0.16.2" }
gluesql-csv-storage = { path = "./storages/csv-storage", version = "0.16.2" }
gluesql-composite-storage = { path = "./storages/composite-storage", version = "0.16.2" }
gluesql-web-storage = { path = "./storages/web-storage", version = "0.16.2" }
gluesql-idb-storage = { path = "./storages/idb-storage", version = "0.16.2" }
gluesql-redis-storage = { path = "./storages/redis-storage", version = "0.16.2" }
gluesql-mongo-storage = { path = "./storages/mongo-storage", version = "0.16.2" }
gluesql-parquet-storage = { path = "./storages/parquet-storage", version = "0.16.2" }
gluesql-file-storage = { path = "./storages/file-storage", version = "0.16.2" }
gluesql-git-storage = { path = "./storages/git-storage", version = "0.16.2" }
utils = { package = "gluesql-utils", path = "./utils", version = "0.16.2" }
