[workspace]
resolver = "2"
members = [
  "cli",
  "core",
  "macros",
  "pkg/rust",
  "pkg/javascript",
  "pkg/python",
  "storages/*",
  "test-suite",
  "utils",
]
default-members = [
  "cli",
  "core",
  "macros",
  "pkg/rust",
  "pkg/javascript",
  "pkg/python",
  "storages/*",
  "test-suite",
  "utils",
]

# ref. https://github.com/rustwasm/wasm-pack/issues/1111
# enable this only for gluesql-js build
# [profile.release]
# opt-level = "s"

[workspace.package]
version = "0.18.0"
edition = "2024"
description = "GlueSQL - Open source SQL database engine fully written in Rust with pure functional execution layer, easily swappable storage and web assembly support!"
license = "Apache-2.0"
repository = "https://github.com/gluesql/gluesql"
documentation = "https://docs.rs/gluesql/"

[workspace.dependencies]
gluesql-core = { path = "./core", version = "0.18.0" }

cli = { package = "gluesql-cli", path = "./cli", version = "0.18.0" }
test-suite = { package = "gluesql-test-suite", path = "./test-suite", version = "0.18.0" }
gluesql_memory_storage = { path = "./storages/memory-storage", version = "0.18.0" }
gluesql-shared-memory-storage = { path = "./storages/shared-memory-storage", version = "0.18.0" }
gluesql_sled_storage = { path = "./storages/sled-storage", version = "0.18.0" }
gluesql-redb-storage = { path = "./storages/redb-storage", version = "0.18.0" }
gluesql-json-storage = { path = "./storages/json-storage", version = "0.18.0" }
gluesql-csv-storage = { path = "./storages/csv-storage", version = "0.18.0" }
gluesql-composite-storage = { path = "./storages/composite-storage", version = "0.18.0" }
gluesql-web-storage = { path = "./storages/web-storage", version = "0.18.0" }
gluesql-idb-storage = { path = "./storages/idb-storage", version = "0.18.0" }
gluesql-redis-storage = { path = "./storages/redis-storage", version = "0.18.0" }
gluesql-mongo-storage = { path = "./storages/mongo-storage", version = "0.18.0" }
gluesql-parquet-storage = { path = "./storages/parquet-storage", version = "0.18.0" }
gluesql-file-storage = { path = "./storages/file-storage", version = "0.18.0" }
gluesql-git-storage = { path = "./storages/git-storage", version = "0.18.0" }
utils = { package = "gluesql-utils", path = "./utils", version = "0.18.0" }

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
too_many_lines = "allow"  # It's a clippy::pedantic rule, but it should still be allowed for cohesion.
assigning_clones = "allow"
ignore_without_reason = "allow"
inline_always = "allow"
should_panic_without_expect = "allow"
bool_to_int_with_if = "allow"
borrow_as_ptr = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "allow"
cast_sign_loss = "allow"
ptr_as_ptr = "allow"
ptr_cast_constness = "allow"
ref_as_ptr = "allow"
checked_conversions = "allow"
comparison_chain = "allow"
same_functions_in_if_condition = "allow"
copy_iterator = "allow"
default_trait_access = "allow"
explicit_deref_methods = "allow"
ref_binding_to_reference = "allow"
expl_impl_clone_on_copy = "allow"
unsafe_derive_deserialize = "allow"
doc_comment_double_space_linebreaks = "allow"
doc_link_with_quotes = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
empty_enum = "allow"
redundant_closure_for_method_calls = "allow"
fn_params_excessive_bools = "allow"
struct_excessive_bools = "allow"
uninlined_format_args = "allow"
unnecessary_debug_formatting = "allow"
format_push_string = "allow"
must_use_candidate = "allow"
ref_option = "allow"
if_not_else = "allow"
ignored_unit_patterns = "allow"
implicit_hasher = "allow"
inconsistent_struct_constructor = "allow"
index_refutable_slice = "allow"
maybe_infinite_iter = "allow"
manual_instant_elapsed = "allow"
unchecked_duration_subtraction = "allow"
invalid_upcast_comparisons = "allow"
struct_field_names = "allow"
items_after_statements = "allow"
iter_not_returning_iterator = "allow"
into_iter_without_iter = "allow"
iter_without_into_iter = "allow"
large_futures = "allow"
large_stack_arrays = "allow"
elidable_lifetime_names = "allow"
large_digit_groups = "allow"
unreadable_literal = "allow"
explicit_into_iter_loop = "allow"
explicit_iter_loop = "allow"
macro_use_imports = "allow"
manual_assert = "allow"
manual_is_power_of_two = "allow"
manual_let_else = "allow"
manual_string_new = "allow"
match_bool = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
match_wild_err_arm = "allow"
single_match_else = "allow"
case_sensitive_file_extension_comparisons = "allow"
cloned_instead_of_copied = "allow"
filter_map_next = "allow"
flat_map_option = "allow"
format_collect = "allow"
from_iter_instead_of_collect = "allow"
implicit_clone = "allow"
inefficient_to_string = "allow"
ip_constant = "allow"
iter_filter_is_ok = "allow"
iter_filter_is_some = "allow"
manual_is_variant_and = "allow"
map_unwrap_or = "allow"
naive_bytecount = "allow"
option_as_ref_cloned = "allow"
stable_sort_primitive = "allow"
str_split_at_newline = "allow"
unnecessary_join = "allow"
used_underscore_binding = "allow"
used_underscore_items = "allow"
mismatching_type_param_order = "allow"
missing_fields_in_debug = "allow"
mut_mut = "allow"
needless_continue = "allow"
needless_for_each = "allow"
needless_pass_by_value = "allow"
no_effect_underscore_binding = "allow"
no_mangle_with_rust_abi = "allow"
many_single_char_names = "allow"
similar_names = "allow"
non_std_lazy_statics = "allow"
float_cmp = "allow"
manual_midpoint = "allow"
needless_bitwise_bool = "allow"
verbose_bit_mask = "allow"
large_types_passed_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
pub_underscore_fields = "allow"
range_minus_one = "allow"
range_plus_one = "allow"
needless_raw_string_hashes = "allow"
redundant_else = "allow"
ref_option_ref = "allow"
return_self_not_must_use = "allow"
semicolon_if_nothing_returned = "allow"
single_char_pattern = "allow"
string_add_assign = "allow"
transmute_ptr_to_ptr = "allow"
linkedlist = "allow"
option_option = "allow"
unicode_not_nfc = "allow"
unnecessary_box_returns = "allow"
unnecessary_literal_bound = "allow"
unnecessary_semicolon = "allow"
unnecessary_wraps = "allow"
unnested_or_patterns = "allow"
unused_async = "allow"
unused_self = "allow"
enum_glob_use = "allow"
wildcard_imports = "allow"
zero_sized_map_values = "allow"
