[package]
name = "gluesql-cli"
version = "0.13.1"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
gluesql-core = { path = "../core", version = "0.13.1" }
gluesql_sled_storage = { path = "../storages/sled-storage", version = "0.13.0" }
gluesql_memory_storage = { path = "../storages/memory-storage", version = "0.13.0" }

clap = { version = "3.2.2", features = ["derive"] }
rustyline = "9.1"
rustyline-derive = "0.6"
tabled ="0.8"
thiserror = "1.0"
edit = "0.1.4"
futures = "0.3"
anyhow = "1.0"
itertools = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
