[package]
name = "gluesql-core"
version = "0.13.1"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
utils = { package = "gluesql-utils", path = "../utils", version = "0.13.0" }

regex = "1"
async-trait = "0.1"
cfg-if = "1"
futures-enum = "0.1.17"
futures = "0.3"
chrono = { version = "=0.4.23", features = ["serde", "wasmbind"] }
rust_decimal = { version = "1", features = ["serde-str"] }
im-rc = "15"
iter-enum = "1"
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = { version = "0.30", features = ["serde", "bigdecimal"] }
thiserror = "1.0"
strum_macros = "0.24"
bigdecimal = { version = "0.3", features = ["serde", "string-only"] }
hex = "0.4"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies.uuid]
version = "1"
features = ["v4", "js"]
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.uuid]
version = "1"
features = ["v4"]
