[package]
name = "gluesql-macros"
version.workspace = true
edition.workspace = true
description = "Derive macro for gluesql row conversion"
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
gluesql = { path = "../pkg/rust", version = "0.18.0" }
futures = "0.3"
chrono = "0.4"
rust_decimal = "1"
trybuild = "1"
