[package]
name = "gluesql-macros"
version.workspace = true
edition.workspace = true
description = "Derive macro for gluesql row conversion"
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro-crate = "3"

[dev-dependencies]
gluesql-core.workspace = true
gluesql_memory_storage.workspace = true
futures = "0.3"
chrono = "0.4"
rust_decimal = "1"
trybuild = "1"

[lints]
workspace = true
