[package]
name = "gluesql-pm"
version = "0.11.0"
edition = "2021"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
description = "GlueSQL - Open source SQL database engine fully written in Rust with pure functional execution layer, easily swappable storage and web assembly support!"
license = "Apache-2.0"
repository = "https://github.com/gluesql/gluesql"
documentation = "https://docs.rs/gluesql/"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

