[package]
name = "gluesql-test-suite"
version = "0.13.1"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
gluesql-core = { path = "../core", version = "0.13.1" }
async-trait = "0.1"
bigdecimal = "0.3"
chrono = "0.4"
rust_decimal = "1"
hex = "0.4"
serde_json = "1.0.91"

[target.'cfg(target_arch = "wasm32")'.dependencies.uuid]
version = "1"
features = ["v4", "js"]
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.uuid]
version = "1"
features = ["v4"]

[features]
alter-table = ["gluesql-core/alter-table"]
index = ["gluesql-core/index"]
transaction = ["gluesql-core/transaction"]
