[package]
name = "gluesql-test-suite"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
gluesql-core.workspace = true
async-trait = "0.1"
bigdecimal = "0.4.2"
chrono = "0.4.31"
rust_decimal = "1"
hex = "0.4"
serde_json = "1.0.91"
pretty_assertions = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies.uuid]
version = "1"
features = ["v4", "v7", "js"]
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.uuid]
version = "1"
features = ["v4", "v7"]
