[package]
name = "gluesql-utils"
version = "0.13.0"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
indexmap = "1"
pin-project = "1"
futures = "0.3"
