[package]
name = "gluesql-utils"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
indexmap = "1"
pin-project = "1"
futures = "0.3"
