[package]
name = "gluesql-utils"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
indexmap = { version = "1", default-features = false }
pin-project = "1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = [
    "futures/std",
    "futures/async-await",
    "futures/executor",
    "indexmap/std",
]
