[package]
name = "gluesql-js"
version = "0.12.0"
edition = "2021"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
description = "GlueSQL - Open source SQL database engine fully written in Rust with pure functional execution layer, easily swappable storage and web assembly support!"
license = "Apache-2.0"
repository = "https://github.com/gluesql/gluesql"
documentation = "https://docs.rs/gluesql/"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3"

serde = "1"
serde_json = "1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

gluesql-core = { path = "../../core", version = "0.12.0" }
memory-storage = { package = "gluesql_memory_storage", path = "../../storages/memory-storage", version = "0.12.0" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dev-dependencies.test-suite]
package = "gluesql-test-suite"
path = "../../test-suite"
version = "0.12.0"
features = ["alter-table", "metadata"]
