[package]
name = "gluesql-java"
authors = ["Junghoon Ban <junghoon.ban@gmail.com>"]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[lib]
name = "gluesql_java"
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
gluesql-core.workspace = true
gluesql_memory_storage.workspace = true
gluesql-json-storage.workspace = true
gluesql_sled_storage.workspace = true
gluesql-shared-memory-storage.workspace = true

uniffi = { version = "0.30.0", features = ["cli"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
thiserror = "2.0.16"
uuid = "1.0"

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

# Optimize release builds for size and strip debug symbols
# Note: This is a package-level profile override.
# Cargo will show a warning but these settings WILL be applied during release builds.
# The warning can be safely ignored - it's informational, not an error.
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
strip = true        # Strip symbols from binary
codegen-units = 1   # Better optimization (slower compile, smaller binary)
panic = "abort"     # Smaller binary, no unwinding

[dev-dependencies]
