[package]
name = "gluesql-node"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = false

[lib]
crate-type = ["cdylib"]

[dependencies]
gluesql-core.workspace = true
gluesql_memory_storage.workspace = true

napi = { version = "3", features = ["async", "napi4", "tokio_rt", "serde-json"] }
napi-derive = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
