[package]
name = "gluesql-py"
authors = [
    "Gyubong Lee <jopemachine@naver.com>",
    "Taehoon Moon <taehoon.moon@outlook.com>",
]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[lib]
name = "gluesql"
crate-type = ["cdylib", "rlib"]

[features]
default = []
include-python-workspace = []

[dependencies]
gluesql-core.workspace = true
gluesql_memory_storage.workspace = true
gluesql-web-storage.workspace = true
gluesql-idb-storage.workspace = true
gluesql-composite-storage.workspace = true
gluesql_sled_storage.workspace = true
gluesql-json-storage.workspace = true
gluesql-shared-memory-storage.workspace = true

pyo3 = { version = "0.19.2", features = ["extension-module"] }
pythonize = "0.19.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1"
serde_json = "1"
gloo-utils = { version = "0.1.6", features = ["serde"] }

[dev-dependencies]
test-suite.workspace = true
