[package]
name = "gluesql"
version = "0.13.1"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
default-run = "gluesql"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = [
	"sql-database",
	"sql",
	"websql",
	"webassembly",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
gluesql-core = { path = "../../core", version = "0.13.1" }
cli = { package = "gluesql-cli", path = "../../cli", version = "0.13.1", optional = true }
test-suite = { package = "gluesql-test-suite", path = "../../test-suite", version = "0.13.1", optional = true }
memory-storage = { package = "gluesql_memory_storage", path = "../../storages/memory-storage", version = "0.13.0", optional = true }
shared-memory-storage = { package = "gluesql-shared-memory-storage", path = "../../storages/shared-memory-storage", version = "0.13.0", optional = true }
sled-storage = { package = "gluesql_sled_storage", path = "../../storages/sled-storage", version = "0.13.0", optional = true }

[dev-dependencies]
futures = "0.3"

[features]
# DB User
default = [
	"cli",
	"test-suite",
	"memory-storage",
	"shared-memory-storage",
	"sled-storage",
]
