[package]
name = "gluesql"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
default-run = "gluesql"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = [
	"sql-database",
	"sql",
	"websql",
	"webassembly",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
gluesql-core.workspace = true
cli = { workspace = true, optional = true }
test-suite = { workspace = true, optional = true }
memory-storage = { workspace = true, optional = true }
shared-memory-storage = { workspace = true, optional = true }
sled-storage = { workspace = true, optional = true }
json-storage = { workspace = true, optional = true }
csv-storage = { workspace = true, optional = true }
composite-storage = { workspace = true, optional = true }
web-storage = { workspace = true, optional = true }
idb-storage = { workspace = true, optional = true }

[dev-dependencies]
futures = "0.3"

[features]
# DB User
default = [
	"cli",
	"test-suite",
	"memory-storage",
	"shared-memory-storage",
	"sled-storage",
	"json-storage",
	"csv-storage",
	"composite-storage",
]
